Packages_2024/hdf5_1.10.10/hdf5/H5Ppublic.inc

function H5Pset_mcdt_search_cb(plist_id: Thid_t; func: TH5O_mcdt_search_cb_t; op_data: pointer): Therr_t; cdecl; external libhdf5_serial;

function H5Pregister1(cls_id: Thid_t; name: pchar; size: Tsize_t; def_value: pointer; prp_create: TH5P_prp_create_func_t;
  prp_set: TH5P_prp_set_func_t; prp_get: TH5P_prp_get_func_t; prp_del: TH5P_prp_delete_func_t; prp_copy: TH5P_prp_copy_func_t; prp_close: TH5P_prp_close_func_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pinsert1(plist_id: Thid_t; name: pchar; size: Tsize_t; value: pointer; prp_set: TH5P_prp_set_func_t;
  prp_get: TH5P_prp_get_func_t; prp_delete: TH5P_prp_delete_func_t; prp_copy: TH5P_prp_copy_func_t; prp_close: TH5P_prp_close_func_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_filter1(plist_id: Thid_t; filter: dword; flags: Pdword; cd_nelmts: Psize_t; cd_values: Pdword;
  namelen: Tsize_t; name: pchar): TH5Z_filter_t; cdecl; external libhdf5_serial;
function H5Pget_filter_by_id1(plist_id: Thid_t; id: TH5Z_filter_t; flags: Pdword; cd_nelmts: Psize_t; cd_values: Pdword;
  namelen: Tsize_t; name: pchar): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_version(plist_id: Thid_t; boot: Pdword; freelist: Pdword; stab: Pdword; shhdr: Pdword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_file_space(plist_id: Thid_t; strategy: TH5F_file_space_type_t; threshold: Thsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_file_space(plist_id: Thid_t; strategy: PH5F_file_space_type_t; threshold: Phsize_t): Therr_t; cdecl; external libhdf5_serial;

// === Konventiert am: 21-8-26 14:40:24 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
